--- a/src/app/module/blog/blog.component.html
+++ b/src/app/module/blog/blog.component.html
@@ -52,7 +52,7 @@
                                         <ul>
                                             <li>
                                                 <div class="post-author">
-                                                    <a href="doctor-profile.html"><img src="assets/img/doctors/doctor-thumb-02.jpg" alt="Post Author"> <span>Dr. Darren Elder</span></a>
+                                                    <a href="javascript:void(0);"><img src="https://thumbs.dreamstime.com/b/female-dentist-avatar-isolated-vector-illustration-you-can-use-image-business-websites-company-others-197269800.jpg" alt="Post Author"> <span>{{blogDetails?.doctorName}}</span></a>
                                                 </div>
                                             </li>
                                             <li><i class="far fa-calendar"></i>{{ blogDetails?.createdAt | date: 'dd MMM yyyy' }}</li>
@@ -86,12 +86,12 @@
                                     <div class="about-author">
                                         <div class="about-author-img">
                                             <div class="author-img-wrap">
-                                                <a href="doctor-profile.html"><img class="img-fluid rounded-circle" alt="" src="assets/img/doctors/doctor-thumb-02.jpg"></a>
+                                                <a href="javascript:void(0);"><img class="img-fluid rounded-circle" alt="" src="https://thumbs.dreamstime.com/b/female-dentist-avatar-isolated-vector-illustration-you-can-use-image-business-websites-company-others-197269800.jpg"></a>
                                             </div>
                                         </div>
                                         <div class="author-details">
-                                            <a href="doctor-profile.html" class="blog-author-name">Dr. Darren Elder</a>
-                                            <p class="mb-0 stbs">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.</p>
+                                            <a href="doctor-profile.html" class="blog-author-name">{{blogDetails?.doctorName}}</a>
+                                            <p class="mb-0 stbs">N/A</p>
                                         </div>
                                     </div>
                                 </div>
@@ -138,7 +138,7 @@
                                         <ul>
                                             <li>
                                                 <div class="post-author">
-                                                    <a href="doctor-profile.html"><img src="assets/img/doctors/doctor-thumb-02.jpg" alt="Post Author"> <span>Dr. Darren Elder</span></a>
+                                                    <a href="javascript:void(0);"><img src="https://thumbs.dreamstime.com/b/female-dentist-avatar-isolated-vector-illustration-you-can-use-image-business-websites-company-others-197269800.jpg" alt="Post Author"> <span>{{blogDetails?.doctorName}}</span></a>
                                                 </div>
                                             </li>
                                             <li><i class="far fa-calendar"></i>{{ blogDetails?.createdAt | date: 'dd MMM yyyy' }}</li>
@@ -172,12 +172,12 @@
                                     <div class="about-author">
                                         <div class="about-author-img">
                                             <div class="author-img-wrap">
-                                                <a href="doctor-profile.html"><img class="img-fluid rounded-circle" alt="" src="assets/img/doctors/doctor-thumb-02.jpg"></a>
+                                                <a href="javascript:void(0);"><img class="img-fluid rounded-circle" alt="" src="https://thumbs.dreamstime.com/b/female-dentist-avatar-isolated-vector-illustration-you-can-use-image-business-websites-company-others-197269800.jpg"></a>
                                             </div>
                                         </div>
                                         <div class="author-details">
-                                            <a href="doctor-profile.html" class="blog-author-name">Dr. Darren Elder</a>
-                                            <p class="mb-0 stbs">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.</p>
+                                            <a href="javascript:void(0);" class="blog-author-name">{{blogDetails?.doctorName}}</a>
+                                            <p class="mb-0 stbs">N/A</p>
                                         </div>
                                     </div>
                                 </div>
