--- a/src/app/module/booking-confirm/booking-confirm.component.html
+++ b/src/app/module/booking-confirm/booking-confirm.component.html
@@ -10,7 +10,7 @@
                         <div class="success-cont">
                             <i class="fas fa-check"></i>
                             <h3>Appointment booked Successfully!</h3>
-                            <p>Appointment booked with <strong>{{ sessionValue?.doctorDetails.name }}</strong><br> on <strong>{{sessionValue?.slotVlaue?.slotDate | date: 'dd MMM YYYY'}} {{ sessionValue?.slotVlaue?.timeslot }}</strong></p>
+                            <p>Appointment booked with <strong>{{ sessionValue?.doctorDetails?.name }}</strong><br> on <strong>{{sessionValue?.slotVlaue?.slotDate | date: 'dd MMM YYYY'}} {{ sessionValue?.slotVlaue?.timeslot }}</strong></p>
                             <!-- <a href="javascript:void(0);" class="btn btn-primary view-inv-btn">View Invoice</a> -->
                         </div>
                     </div>
