--- a/src/app/module/index/index.component.html
+++ b/src/app/module/index/index.component.html
@@ -284,7 +284,7 @@
                                     <ul class="entry-meta meta-item">
                                         <li>
                                             <div class="post-author">
-                                                <a href="#"><img src="assets/img/doctors/doctor-thumb-01.jpg" alt="Post Author"> <span>Dr. Ruby Perrin</span></a>
+                                                <a href="#"><img src="https://thumbs.dreamstime.com/b/female-dentist-avatar-isolated-vector-illustration-you-can-use-image-business-websites-company-others-197269800.jpg" alt="Post Author"> <span>{{blog?.doctorName}}</span></a>
                                             </div>
                                         </li>
                                         <li><i class="far fa-clock"></i> {{ blog?.createdAt | date: 'dd MMM yyyy' }}</li>
