--- a/src/app/module/online-consultation/online-consultation.component.html
+++ b/src/app/module/online-consultation/online-consultation.component.html
@@ -1,34 +1,5 @@
-<!-- Breadcrumb -->
-<div class="breadcrumb-bar">
-    <div class="container-fluid">
-        <div class="row align-items-center">
-            <div class="col-md-8 col-12">
-                <nav aria-label="breadcrumb" class="page-breadcrumb">
-                </nav>
-                <h2 class="breadcrumb-title">{{totalDocuments}} matches found for : Dentist</h2>
-            </div>
-            <!-- <div class="col-md-4 col-12 d-md-block d-none">
-                <div class="sort-by">
-                    <span class="sort-title">Sort by</span>
-                    <span class="sortby-fliter">
-                        <select class="select">
-                            <option>Select</option>
-                            <option class="sorting">Rating</option>
-                            <option class="sorting">Popular</option>
-                            <option class="sorting">Latest</option>
-                            <option class="sorting">Free</option>
-                        </select>
-                    </span>
-                </div>
-            </div> -->
-        </div>
-    </div>
-</div>
-<!-- /Breadcrumb -->
-
-
 <!-- Page Content -->
-<div class="content">
+<div class="content comgap1">
     <div class="container-fluid">
         <ngx-ui-loader [loaderId]="'loader-01'"></ngx-ui-loader>
         <div class="row">
