--- a/src/app/module/about-us/about-us.component.css
+++ b/src/app/module/about-us/about-us.component.css
@@ -1,9 +1,9 @@
-.bgw{
+.bgw {
     background-color: white !important;
 }
 
-.bgimg{
-     background-image: url("/src/assets/img/about/bgintro.png");
+.bgimg {
+    background-image: url("/assets/img/about/bgintro.png");
     background-size: 100% 75%;
     background-repeat: no-repeat;
     padding-top: 50px;
@@ -11,8 +11,7 @@
     background-color: white;
 }
 
-.gc
-{
+.gc {
     padding-left: 15%;
     padding-right: 15%;
     font-weight: 500;
@@ -24,27 +23,24 @@ span.dd {
 }
 
 .bg-image-21 {
-    background: url(/src/assets/img/about/bbb.png) no-repeat center;
+    background: url('/assets/img/about/bbb.png') no-repeat center;
     background-size: cover;
 }
 
-.ll
-{
+.ll {
     padding-top: 6%;
     padding-bottom: 6%;
 }
 
-.subppp
-{
+.subppp {
     padding-left: 19%;
     padding-right: 19%;
     padding-top: 11px;
     padding-bottom: 19px;
 }
 
-.linepo
-{
-        position: absolute;
+.linepo {
+    position: absolute;
     transform: translate(12px, 91px);
 }
 
@@ -54,8 +50,7 @@ p.iconp {
     font-weight: bold;
 }
 
-.pr
-{
+.pr {
     position: relative;
 }
 
@@ -65,8 +60,7 @@ p.iconp {
     padding-left: 23px;
 }
 
-.ppprow
-{
+.ppprow {
     padding-top: 45px;
 }
 
@@ -74,33 +68,35 @@ p.iconp {
     height: 70px;
 }
 
-.ppp
-{
+.ppp {
     padding-top: 6%;
     padding-bottom: 6%;
     padding-left: 6%;
     padding-right: 6%;
 }
 
-.icontext
-{
+.icontext {
     font-size: 14px;
     padding-top: 16px;
     font-weight: 500;
     color: #272b41;
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
     color: #272b41;
     font-weight: 600;
 }
-.cw
-{
+
+.cw {
     color: white;
 }
 
-.whysection
-{
+.whysection {
     background: #3a9cd8;
     color: white;
     padding: 55px 81px 55px 121px;
@@ -108,12 +104,11 @@ h1, h2, h3, h4, h5, h6 {
     font-size: 16px;
 }
 
-.pb{
-        padding-bottom: 3%;
+.pb {
+    padding-bottom: 3%;
 }
 
-.ptt
-{
+.ptt {
     padding-top: 7%;
     padding-bottom: 7% !important;
 }
@@ -130,23 +125,18 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .breadcrumb-bar {
-  
     margin: 0 0 0px 0;
 }
 
-.p40
-{
+.p40 {
     padding-top: 40px;
 }
 
-.bxsha
-{
+.bxsha {
     box-shadow: 5px 7px 7px 1px #00000008;
 }
 
-
-.p_intro
-{
+.p_intro {
     padding-left: 21%;
     padding-right: 21%;
     color: #272b41;
@@ -154,67 +144,52 @@ h1, h2, h3, h4, h5, h6 {
     padding-bottom: 0%;
     font-size: 16px;
     font-family: "Poppins", sans-serif;
-
 }
 
 @media only screen and (max-width: 600px) {
-  .p_intro {
-    padding-left: 11%;
-    padding-right: 11%;
-    padding-top: 5%;
-    
+    .p_intro {
+        padding-left: 11%;
+        padding-right: 11%;
+        padding-top: 5%;
+    }
+    .teamp2 {
+        padding-left: 20px;
+        padding-top: 6px;
+        padding-right: 20px;
+    }
+    section#team {
+        text-align: left;
+    }
+    img.tela {
+        width: 75%;
+    }
+    .btn-grad {
+        margin: 10px 5px;
+        padding: 13px 10px;
+    }
+    .howicon {
+        padding-bottom: 32px;
+        /* display: flex; */
+    }
+    .linepo {
+        display: none;
+    }
+    .whysection {
+        padding: 52px 53px 55px 53px;
+    }
+    .team {
+        padding-bottom: 33px;
+    }
+    p.iconp {
+        padding-top: 30px;
+    }
+    .teamp1 {
+        padding-top: 5px;
+        font-size: 15px;
+    }
 }
 
-.teamp2 {
-    padding-left: 20px;
-    padding-top: 6px;
-    
-    padding-right: 20px;
-}
-
-section#team {
-    text-align: left;
-}
-
-img.tela {
-    width: 75%;
-}
-
-.btn-grad {
-    margin: 10px 5px;
-    padding: 13px 10px;
-}
-
-.howicon {
-    padding-bottom: 32px;
-    /* display: flex; */
-}
-
-.linepo {
-    display: none;
-}
-
-.whysection{
-    padding: 52px 53px 55px 53px;
-    
-}
-
-.team {
-    padding-bottom: 33px;
-}
-
-p.iconp {
-    padding-top: 30px;
-}
-
-.teamp1 {
-    padding-top: 5px;
-    font-size: 15px;
-}
-}
-
-.tela-text{
+.tela-text {
     font-size: 15px !important;
     color: black !important;
 }
-
