--- a/src/app/module/about-us/about-us.component.html
+++ b/src/app/module/about-us/about-us.component.html
@@ -1,25 +1,13 @@
 <!-- Page Content -->
 <div class="content">
 
-    <!-- Breadcrumb -->
-    <div class="breadcrumb-bar gradient-bg ">
-        <div class="container-fluid">
-            <div class="row align-items-center">
-                <div class="col-md-12 col-12">
-                    <h2 class="breadcrumb-title">Who we are</h2>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- /Breadcrumb -->
 
     <div class="container-fluit">
         <div class="row bgimg">
             <div class="col-12 text-center">
-                <img src="assets/img/teladent.png"  class="tela" alt="Teladent">
-                <p class="p_intro stbs">India’s first teledentistry platform that provides virtual advice and expert opinion for all your dental problems. Our
-                online consultation can help you gain a clearer idea of what your dental issues are, and what treatment may be right for
-                you, from the team of a highly qualified certified dentist at anytime from anywhere.Tela health is not a specific service, but a collection of means to enhance care.</p>
+                <img src="assets/img/teladent.png" class="tela" alt="Teladent">
+                <p class="p_intro stbs">India’s first teledentistry platform that provides virtual advice and expert opinion for all your dental problems. Our online consultation can help you gain a clearer idea of what your dental issues are, and what treatment may be right
+                    for you, from the team of a highly qualified certified dentist at anytime from anywhere.Tela health is not a specific service, but a collection of means to enhance care.</p>
 
             </div>
         </div>
@@ -28,22 +16,20 @@
             <div class="container text-center text-md-left">
                 <div class="row align-items-center row-30 flex-md-row">
                     <div class="col-lg-6 col-md-6">
-                        <div class="block-xs"><img src="assets/img/about/about_intro.png"
-                                alt="" class="img-fluid">
+                        <div class="block-xs"><img src="assets/img/about/about_intro.png" alt="" class="img-fluid">
                         </div>
                     </div>
                     <div class="col-lg-5 col-md-6">
                         <h2 class=" p40 ">What is Teledentistry?</h2>
-                       
-                        <p class="tela-text stbs">Teledentistry refers to the use of telehealth systems and methodologies in dentistry. Telehealth refers to a broad
-                        variety of technologies and tactics to deliver virtual medical, health, and education services.</p>
-                     </div>
-                    
+
+                        <p class="tela-text stbs">Teledentistry refers to the use of telehealth systems and methodologies in dentistry. Telehealth refers to a broad variety of technologies and tactics to deliver virtual medical, health, and education services.</p>
+                    </div>
+
                 </div>
             </div>
         </section>
 
-        
+
 
 
         <!-- Team -->
@@ -62,9 +48,7 @@
                                 <p class="stbs">Pediatric & Preventive Dentist, Patient Relationship Manager</p>
                             </div>
                             <div class="col-sm-12 teamp2">
-                                <p class="stbs">We us personalized interactions with
-                                highly qualified registered professionals to deliver the best preventive oral care and drive better
-                                oral health outcomes</p>
+                                <p class="stbs">We us personalized interactions with highly qualified registered professionals to deliver the best preventive oral care and drive better oral health outcomes</p>
                             </div>
                         </div>
                     </div>
@@ -80,14 +64,12 @@
                                 <p class="stbs">Pediatric & Preventive Dentist, Patient Relationship Manager</p>
                             </div>
                             <div class="col-sm-12 teamp2">
-                                <p class="stbs">We us personalized interactions with
-                                    highly qualified registered professionals to deliver the best preventive oral care and drive better
-                                    oral health outcomes</p>
+                                <p class="stbs">We us personalized interactions with highly qualified registered professionals to deliver the best preventive oral care and drive better oral health outcomes</p>
                             </div>
                         </div>
                     </div>
                     <!-- ./Team member -->
-                   
+
 
                 </div>
             </div>
@@ -100,10 +82,8 @@
                 <div class="row">
                     <div class="col-sm-4 col-xs-12 whysection">
                         <h2 class="section-title pb cw"> Why Teladent </h2><br>
-                        <p>Our mission is to provide all our clients with various types of dental services, qualified assistance and effective
-                        treatment. We work for your oral health, beautiful smiles and well-being. Teladent provides and empowers virtual oral
-                        care services, to every individual’s health journey. It helps you with improved access to oral healthcare, and improve
-                        the delivery of it, from prevention to acute care to complex oral care needs.</p>
+                        <p>Our mission is to provide all our clients with various types of dental services, qualified assistance and effective treatment. We work for your oral health, beautiful smiles and well-being. Teladent provides and empowers virtual
+                            oral care services, to every individual’s health journey. It helps you with improved access to oral healthcare, and improve the delivery of it, from prevention to acute care to complex oral care needs.</p>
                     </div>
                     <div class="col-sm-8 col-xs-12 ppp">
                         <div class="row text-center ppprow">
@@ -126,76 +106,74 @@
                                 <img src="assets/img/about/safe.png">
                                 <p class="icontext">Highest Safety measures</p>
                             </div>
-                            
-                      
 
-                       
+
+
+
                             <div class="col-sm-3 iconr">
                                 <img src="assets/img/about/rupee.png">
-                                <p class="icontext">Ensuring
-                                Ethical Pricing</p>
+                                <p class="icontext">Ensuring Ethical Pricing</p>
                             </div>
-                        
+
                             <div class="col-sm-3 iconr">
                                 <img src="assets/img/about/plususer.png">
                                 <p class="icontext">Follow up care and updates</p>
                             </div>
-                        
+
                             <div class="col-sm-3 iconr">
                                 <img src="assets/img/about/wallet.png">
                                 <p class="icontext">Easy financing options</p>
                             </div>
-                        
+
                             <div class="col-sm-3 iconr">
                                 <img src="assets/img/about/lips.png">
                                 <p class="icontext">Ensure a happy smile of clients</p>
                             </div>
-                        
+
                         </div>
-                     
+
                     </div>
                 </div>
             </div>
-            </section>
+        </section>
 
         <!-- Why Teladent section end -->
 
         <!-- How it Works section start -->
 
-            <section class="section bgw ll">
-                <div class="container text-center">
-                    <div class="row justify-content-center">
-                        <h2 class="section-title"> How it Works </h2>
-                        <p class="subppp stbs">We use personalized interactions with highly qualified registered professionals to deliver the best preventive oral care
-                        and drive better oral health outcomes.</p>
+        <section class="section bgw ll">
+            <div class="container text-center">
+                <div class="row justify-content-center">
+                    <h2 class="section-title"> How it Works </h2>
+                    <p class="subppp stbs">We use personalized interactions with highly qualified registered professionals to deliver the best preventive oral care and drive better oral health outcomes.</p>
+                </div>
+                <div class="row justify-content-center pr">
+                    <div class="col-sm-12 linepo">
+                        <img class="linehow" src="assets/img/about/line_1.png">
                     </div>
-                    <div class="row justify-content-center pr">
-                        <div class="col-sm-12 linepo">
-                            <img class="linehow" src="assets/img/about/line_1.png">
-                        </div>
-                        
-                        <div class="col-sm-3 howicon">
-                            <img src="assets/img/about/book.png">
-                            <p class="iconp">Book an appointment with specialised doctors</p>
-                        </div>
 
-                        <div class="col-sm-3 howicon">
-                            <img src="assets/img/about/appoitment.png">
-                            <p class="iconp">Get complete virtual consultation & advice</p>
-                        </div>
+                    <div class="col-sm-3 howicon">
+                        <img src="assets/img/about/book.png">
+                        <p class="iconp">Book an appointment with specialised doctors</p>
+                    </div>
 
-                        <div class="col-sm-3 howicon">
-                            <img src="assets/img/about/treatment.png">
-                            <p class="iconp">Treatment planning with highest safety measures</p>
-                        </div>
+                    <div class="col-sm-3 howicon">
+                        <img src="assets/img/about/appoitment.png">
+                        <p class="iconp">Get complete virtual consultation & advice</p>
+                    </div>
 
-                        <div class="col-sm-3 howicon">
-                            <img src="assets/img/about/postcare.png">
-                            <p class="iconp">Post care recommendation & updates</p>
-                        </div>
+                    <div class="col-sm-3 howicon">
+                        <img src="assets/img/about/treatment.png">
+                        <p class="iconp">Treatment planning with highest safety measures</p>
+                    </div>
+
+                    <div class="col-sm-3 howicon">
+                        <img src="assets/img/about/postcare.png">
+                        <p class="iconp">Post care recommendation & updates</p>
                     </div>
                 </div>
-            </section>
+            </div>
+        </section>
 
         <!-- How it Works section end -->
 
@@ -204,12 +182,11 @@
                 <div class="row justify-content-center">
                     <div class="col-xl-10 d-flex flex-column align-items-center">
                         <h2>Get a Free Consultation</h2>
-                        <p class="gc stbs">Let our team handle all your dental healthcare issues.
-                        Call now to get a free consultation from our expert advisors on below numbers.</p>
-                        
+                        <p class="gc stbs">Let our team handle all your dental healthcare issues. Call now to get a free consultation from our expert advisors on below numbers.</p>
+
                         <a class="wow  text-xxl font-weight-bold" href="tel:#">
-                            <h4> +91 9899799981  <span class="dd">|</span>  +91 9899799982</h4>
-                          
+                            <h4> +91 9899799981 <span class="dd">|</span> +91 9899799982</h4>
+
                         </a>
                         <div class="row">
                             <a class="button button-primary button-shadow button-md button-xxl btn-grad  animate__delay-5s 5s" href="javascript:void(0);">Request a Callback</a>
