--- a/src/app/module/contact-us/contact-us.component.html
+++ b/src/app/module/contact-us/contact-us.component.html
@@ -1,17 +1,5 @@
 <!-- Page Content -->
-<div class="content">
-
-    <!-- Breadcrumb -->
-    <div class="breadcrumb-bar gradient-bg ">
-        <div class="container-fluid">
-            <div class="row align-items-center">
-                <div class="col-md-12 col-12">
-                    <h2 class="breadcrumb-title">Contact Information and Enquiry Form</h2>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- /Breadcrumb -->
+<div class="content comgap bgimg">
 
 
     <div class="contact-information mb-5">
@@ -93,7 +81,8 @@
             <div class="col-md-6">
 
                 <div class="map-view">
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3505.101847243413!2d77.11250531516517!3d28.536658295164436!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390cfd309eebed77%3A0xb122512dfb18ffad!2sCelebration%20Gardens!5e0!3m2!1sen!2sin!4v1615982932581!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3505.101847243413!2d77.11250531516517!3d28.536658295164436!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390cfd309eebed77%3A0xb122512dfb18ffad!2sCelebration%20Gardens!5e0!3m2!1sen!2sin!4v1615982932581!5m2!1sen!2sin"
+                        width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
                 </div>
 
             </div>
