--- a/src/app/module/doctors-panel/appointments/appointments.component.html
+++ b/src/app/module/doctors-panel/appointments/appointments.component.html
@@ -1,41 +1,8 @@
 <ngx-ui-loader [loaderId]="'loader-02'"></ngx-ui-loader>
-<!-- Breadcrumb -->
-<div class="breadcrumb-bar">
-    <div class="container-fluid">
-        <div class="row align-items-center">
-            <div class="col-md-3 col-12">
-                <h2 class="breadcrumb-title">Appointments</h2>
-            </div>
-            <div class="col-md-4 col-12 d-md-block d-none">
-                <div class="sort-by">
-                    <span class="sort-title">Filter by</span>
-                    <span class="sortby-fliter">
-                        <select class="select form-control filter" id="status" (change)="statusChange($event.target.value)">
-                            <option class="All" value="all">All</option>
-                            <option class="Pending" value="pending">Pending</option>
-                            <option class="Completed" value="completed">Completed</option>
-                            <option class="Confirmed" value="confirm">Confirmed</option>
-                            <option class="ReScheduled" value="reschedule">ReScheduled</option>
-                        </select>
-                    </span>
-                </div>
-            </div>
-            <div class="col-md-3 col-12">
-                <input type="text" placeholder="Select range" class="form-control filter" id="date" [maxDate]="maxDateType"
-                    (bsValueChange)="rangeDatesUpdated($event)"
-                    [bsConfig]="{rangeInputFormat: 'DD-MM-YYYY',  dateInputFormat: 'DD-MM-YYYY', isAnimated:'true', showWeekNumbers: false,containerClass:'theme-blue' }"
-                    bsDaterangepicker>
-            </div>
-            <div class="col-md-2 col-12">
-                <i class="fa fa-sync" data-toggle="tooltip" data-placement="top" title="Reset" (click)="reset()"></i>
-            </div>
-        </div>
-    </div>
-</div>
-<!-- /Breadcrumb -->
+
 
 <!-- Page Content -->
-<div class="content">
+<div class="content comgap1">
     <div class="container-fluid">
 
         <div class="row">
@@ -53,8 +20,7 @@
 
 
                     <!-- Appointment List -->
-                    <div class="appointment-list"
-                        *ngFor="let list of appointmentList |  paginate: { itemsPerPage: perPage, currentPage: currentPage, totalItems: total }, let i = index;">
+                    <div class="appointment-list" *ngFor="let list of appointmentList |  paginate: { itemsPerPage: perPage, currentPage: currentPage, totalItems: total }, let i = index;">
                         <div class="profile-info-widget">
                             <a href="javascript:void(0);" class="booking-doc-img">
                                 <img src="{{ list.imageUrl }}" alt="User Image">
@@ -62,32 +28,25 @@
                             <div class="profile-det-info">
                                 <h3><a href="javascript:void(0);">{{ list.name }}</a></h3>
                                 <div class="patient-details">
-                                    <h5><i class="far fa-clock"></i>{{ list.appointmentDate | date:'dd-MM-yyyy' }}, {{
-                                        list.appointmentTime }}</h5>
+                                    <h5><i class="far fa-clock"></i>{{ list.appointmentDate | date:'dd-MM-yyyy' }}, {{ list.appointmentTime }}</h5>
                                     <h5><i class="fas fa-map-marker-alt"></i> {{ list.city }}, {{ list.state }}</h5>
                                     <h5><i class="fas fa-envelope"></i> {{ list.notifyEmail }}</h5>
-                                    <h5 class="mb-0"><i class="fas fa-phone"></i>+{{ list.countryCode }} {{ list.phone
-                                        }}</h5>
+                                    <h5 class="mb-0"><i class="fas fa-phone"></i>+{{ list.countryCode }} {{ list.phone }}
+                                    </h5>
                                 </div>
                             </div>
                         </div>
                         <div class="appointment-action">
-                            <a href="javascript:void(0);" id="{{list._id}}"
-                                (click)="individualAppointmentDetails(list._id)" class="btn btn-sm bg-info-light"
-                                data-toggle="modal" data-target="#appt_details">
+                            <a href="javascript:void(0);" id="{{list._id}}" (click)="individualAppointmentDetails(list._id)" class="btn btn-sm bg-info-light" data-toggle="modal" data-target="#appt_details">
                                 <i class="far fa-eye"></i> View
                             </a>
-                            <a *ngIf="list.currentStatus === 'Pending' " href="javascript:void(0);"
-                                (click)="updateStatus('accept', list._id)" class="btn btn-sm bg-success-light">
+                            <a *ngIf="list.currentStatus === 'Pending' " href="javascript:void(0);" (click)="updateStatus('accept', list._id)" class="btn btn-sm bg-success-light">
                                 <i class="fas fa-check"></i> Confirm
                             </a>
-                            <a *ngIf="list.currentStatus === 'Accept' " href="javascript:void(0);"
-                                class="btn btn-sm bg-success-light" (click)="completeRequest(list._id)"
-                                data-toggle="modal" data-target="#appt_comp_details" data-backdrop="static">
+                            <a *ngIf="list.currentStatus === 'Accept' " href="javascript:void(0);" class="btn btn-sm bg-success-light" (click)="completeRequest(list._id)" data-toggle="modal" data-target="#appt_comp_details" data-backdrop="static">
                                 <i class="fas fa-check"></i> Completed
                             </a>
-                            <a *ngIf="list.currentStatus === 'Accept' " (click)="updateStatus('reallocate', list._id)"
-                                href="javascript:void(0);" class="btn btn-sm bg-danger-light">
+                            <a *ngIf="list.currentStatus === 'Accept' " (click)="updateStatus('reallocate', list._id)" href="javascript:void(0);" class="btn btn-sm bg-danger-light">
                                 <i class="fas fa-times"></i> ReSchedule
                             </a>
                         </div>
@@ -100,13 +59,10 @@
 
                 <div class="row result-str" *ngIf="total !== 0">
                     <div class="col-sm-12 col-md-5 ">
-                        <p> {{ (currentPage-1) * perPage + 1 }} to {{ math.min((currentPage
-                            * perPage), total) }} of {{ total }} entries </p>
+                        <p> {{ (currentPage-1) * perPage + 1 }} to {{ math.min((currentPage * perPage), total) }} of {{ total }} entries </p>
                     </div>
                     <div class="col-sm-12 col-md-7 text-right">
-                        <pagination-controls [directionLinks]="directionLinks" [autoHide]="autoHide"
-                            [responsive]="responsive" [previousLabel]="labels.previousLabel"
-                            [nextLabel]="labels.nextLabel" (pageChange)="onPageChange($event)">
+                        <pagination-controls [directionLinks]="directionLinks" [autoHide]="autoHide" [responsive]="responsive" [previousLabel]="labels.previousLabel" [nextLabel]="labels.nextLabel" (pageChange)="onPageChange($event)">
                         </pagination-controls>
                     </div>
                 </div>
@@ -141,18 +97,10 @@
                                 </div>
                                 <div class="col-md-6">
                                     <div class="text-right">
-                                        <button *ngIf="individualDetails?.currentStatus === 'Accept' " type="button"
-                                            disabled class="btn bg-success-light btn-sm"
-                                            id="topup_status">Confirm</button>
-                                        <button *ngIf="individualDetails?.currentStatus === 'Completed' " type="button"
-                                            disabled class="btn bg-success-light btn-sm"
-                                            id="topup_status">Completed</button>
-                                        <button *ngIf="individualDetails?.currentStatus === 'Reallocate' " type="button"
-                                            disabled class="btn btn-sm bg-danger-light"
-                                            id="topup_status">ReSchedule</button>
-                                        <button *ngIf="individualDetails?.currentStatus === 'Pending' " type="button"
-                                            disabled class="btn btn-sm bg-danger-light"
-                                            id="topup_status">Pending</button>
+                                        <button *ngIf="individualDetails?.currentStatus === 'Accept' " type="button" disabled class="btn bg-success-light btn-sm" id="topup_status">Confirm</button>
+                                        <button *ngIf="individualDetails?.currentStatus === 'Completed' " type="button" disabled class="btn bg-success-light btn-sm" id="topup_status">Completed</button>
+                                        <button *ngIf="individualDetails?.currentStatus === 'Reallocate' " type="button" disabled class="btn btn-sm bg-danger-light" id="topup_status">ReSchedule</button>
+                                        <button *ngIf="individualDetails?.currentStatus === 'Pending' " type="button" disabled class="btn btn-sm bg-danger-light" id="topup_status">Pending</button>
                                     </div>
                                 </div>
                             </div>
@@ -195,9 +143,7 @@
                     <div class="form-group">
                         <label for="recipient-name" class="col-form-label">Description <span
                                 class="text-danger">*</span></label>
-                        <textarea [ngClass]="completeValidation.description.errors ? 'is-invalid' : ''"
-                            class="form-control" id="descArea" cols="10" rows="5"
-                            formControlName="description"></textarea>
+                        <textarea [ngClass]="completeValidation.description.errors ? 'is-invalid' : ''" class="form-control" id="descArea" cols="10" rows="5" formControlName="description"></textarea>
                         <div *ngIf="completeValidation.description.errors" class="invalid-feedback">
                             <div *ngIf="completeValidation.description.errors.required">Description is Mandatory</div>
                         </div>
@@ -205,9 +151,7 @@
                     <div class="form-group">
                         <label for="message-text" class="col-form-label"> Prescription (R<sub>x</sub>) <span
                                 class="text-danger">*</span></label>
-                        <textarea [ngClass]="completeValidation.suggestion.errors ? 'is-invalid' : ''"
-                            class="form-control" id="drug_suggestion" cols="10" rows="5"
-                            formControlName="suggestion"></textarea>
+                        <textarea [ngClass]="completeValidation.suggestion.errors ? 'is-invalid' : ''" class="form-control" id="drug_suggestion" cols="10" rows="5" formControlName="suggestion"></textarea>
                         <div *ngIf="completeValidation.suggestion.errors" class="invalid-feedback">
                             <div *ngIf="completeValidation.suggestion.errors.required">Prescription is Mandatory</div>
                         </div>
@@ -223,13 +167,11 @@
                             </div>
                         </div>
                         <div class="field-wrap">
-                            <input class="form-control" id="fileChosen" type='file' accept=".png, .jpg, .jpeg, .gif"
-                                (change)="onSelectFile($event)" multiple>
+                            <input class="form-control" id="fileChosen" type='file' accept=".png, .jpg, .jpeg, .gif" (change)="onSelectFile($event)" multiple>
                         </div>
                     </div>
 
-                    <button [disabled]='completeForm.invalid' type="submit"
-                        class="btn btn-primary submit-btn">Submit</button>
+                    <button [disabled]='completeForm.invalid' type="submit" class="btn btn-primary submit-btn">Submit</button>
                 </form>
             </div>
         </div>
