--- a/src/app/module/doctors-panel/change-password/change-password.component.html
+++ b/src/app/module/doctors-panel/change-password/change-password.component.html
@@ -1,34 +1,24 @@
 <ngx-ui-loader [loaderId]="'loader-02'"></ngx-ui-loader>
 
-<!-- Breadcrumb -->
-<div class="breadcrumb-bar">
-    <div class="container-fluid">
-        <div class="row align-items-center">
-            <div class="col-md-12 col-12">
-                <h2 class="breadcrumb-title">Change Password</h2>
-            </div>
-        </div>
-    </div>
-</div>
-<!-- /Breadcrumb -->
+
 
 <!-- Page Content -->
-<div class="content">
+<div class="content comgap">
     <div class="container-fluid">
         <div class="row">
             <div class="col-md-5 col-lg-4 col-xl-3 theiaStickySidebar">
-            
-               <!-- PROFILE SIDEBAR -->
-               <app-doctor-sidebar></app-doctor-sidebar>
-               <!-- PROFILE SIDEBAR -->
+
+                <!-- PROFILE SIDEBAR -->
+                <app-doctor-sidebar></app-doctor-sidebar>
+                <!-- PROFILE SIDEBAR -->
             </div>
-            
+
             <div class="col-md-7 col-lg-8 col-xl-9">
                 <div class="card">
                     <div class="card-body">
                         <div class="row">
                             <div class="col-md-12 col-lg-6">
-                            
+
                                 <!-- Change Password Form -->
                                 <form [formGroup]="setPassForm">
                                     <div class="form-group">
@@ -45,7 +35,7 @@
                                         <div *ngIf="submitted && validation.password.errors" class="invalid-feedback">
                                             <div *ngIf="validation.password.errors.required">New Password is Mandatory
                                             </div>
-                                        <div *ngIf="validation.password.errors.pattern">Password Must Contain atleast One Alphabet, One Special Character and number. Atleast Password Length is 8</div>
+                                            <div *ngIf="validation.password.errors.pattern">Password Must Contain atleast One Alphabet, One Special Character and number. Atleast Password Length is 8</div>
                                         </div>
                                     </div>
                                     <div class="form-group">
@@ -62,7 +52,7 @@
                                     </div>
                                 </form>
                                 <!-- /Change Password Form -->
-                                
+
                             </div>
                         </div>
                     </div>
@@ -71,5 +61,5 @@
         </div>
     </div>
 
-</div>		
+</div>
 <!-- /Page Content -->
