--- a/src/app/module/doctors-panel/doctors-reviews/doctors-reviews.component.html
+++ b/src/app/module/doctors-panel/doctors-reviews/doctors-reviews.component.html
@@ -1,17 +1,5 @@
-<!-- Breadcrumb -->
-<div class="breadcrumb-bar">
-    <div class="container-fluid">
-        <div class="row align-items-center">
-            <div class="col-md-12 col-12">
-                <h2 class="breadcrumb-title">Reviews</h2>
-            </div>
-        </div>
-    </div>
-</div>
-<!-- /Breadcrumb -->
-
 <!-- Page Content -->
-<div class="content">
+<div class="content comgap1">
     <div class="container-fluid">
 
         <div class="row">
@@ -29,7 +17,7 @@
                     <ul class="comments-list">
 
 
-                            <!-- Comment List -->
+                        <!-- Comment List -->
                         <li class="text-center">
                             <h3>Review Not Found</h3>
                         </li>
