--- a/src/app/module/patient-panel/favourites/favourites.component.html
+++ b/src/app/module/patient-panel/favourites/favourites.component.html
@@ -1,17 +1,5 @@
-<!-- Breadcrumb -->
-<div class="breadcrumb-bar">
-    <div class="container-fluid">
-        <div class="row align-items-center">
-            <div class="col-md-12 col-12">
-                <h2 class="breadcrumb-title">Favourites</h2>
-            </div>
-        </div>
-    </div>
-</div>
-<!-- /Breadcrumb -->
-
 <!-- Page Content -->
-<div class="content">
+<div class="content comgap1">
     <div class="container-fluid">
         <div class="row">
             <!-- Profile Sidebar -->
@@ -53,8 +41,7 @@
                                         <i class="far fa-clock"></i> Available on Fri, 22 Mar
                                     </li>
                                     <li>
-                                        <i class="far fa-money-bill-alt"></i> $300 - $1000 <i class="fas fa-info-circle"
-                                            data-toggle="tooltip" title="Lorem Ipsum"></i>
+                                        <i class="far fa-money-bill-alt"></i> $300 - $1000 <i class="fas fa-info-circle" data-toggle="tooltip" title="Lorem Ipsum"></i>
                                     </li>
                                 </ul>
                                 <div class="row row-sm">
@@ -101,8 +88,7 @@
                                         <i class="far fa-clock"></i> Available on Fri, 22 Mar
                                     </li>
                                     <li>
-                                        <i class="far fa-money-bill-alt"></i> $50 - $300 <i class="fas fa-info-circle"
-                                            data-toggle="tooltip" title="Lorem Ipsum"></i>
+                                        <i class="far fa-money-bill-alt"></i> $50 - $300 <i class="fas fa-info-circle" data-toggle="tooltip" title="Lorem Ipsum"></i>
                                     </li>
                                 </ul>
                                 <div class="row row-sm">
@@ -149,8 +135,7 @@
                                         <i class="far fa-clock"></i> Available on Fri, 22 Mar
                                     </li>
                                     <li>
-                                        <i class="far fa-money-bill-alt"></i> $100 - $400 <i class="fas fa-info-circle"
-                                            data-toggle="tooltip" title="Lorem Ipsum"></i>
+                                        <i class="far fa-money-bill-alt"></i> $100 - $400 <i class="fas fa-info-circle" data-toggle="tooltip" title="Lorem Ipsum"></i>
                                     </li>
                                 </ul>
                                 <div class="row row-sm">
@@ -197,8 +182,7 @@
                                         <i class="far fa-clock"></i> Available on Fri, 22 Mar
                                     </li>
                                     <li>
-                                        <i class="far fa-money-bill-alt"></i> $150 - $250 <i class="fas fa-info-circle"
-                                            data-toggle="tooltip" title="Lorem Ipsum"></i>
+                                        <i class="far fa-money-bill-alt"></i> $150 - $250 <i class="fas fa-info-circle" data-toggle="tooltip" title="Lorem Ipsum"></i>
                                     </li>
                                 </ul>
                                 <div class="row row-sm">
