--- a/src/app/module/patient-panel/invoice-pdf/invoice-pdf.component.html
+++ b/src/app/module/patient-panel/invoice-pdf/invoice-pdf.component.html
@@ -1,128 +1,126 @@
 <ngx-ui-loader [loaderId]="'loader-02'"></ngx-ui-loader>
 
 
-        <!-- Invoice Content -->
-        <div class="content" >
-            <div class="container-fluid">
+<!-- Invoice Content -->
+<div class="content comgap1">
+    <div class="container-fluid">
 
-                <div class="row">
-                    <div class="col-lg-8 offset-lg-2" id="htmlData">
-                        <div class="invoice-content">
-                            <div class="invoice-item">
-                                <div class="row">
-                                    <div class="col-md-6">
-                                        <div class="invoice-logo">
-                                            <img src="assets/img/logo.png" alt="logo">
-                                        </div>
-                                    </div>
-                                    <div class="col-md-6">
-                                        <p class="invoice-details">
-                                            <strong>Order:</strong> #{{ invoicePdfDetails?.invoiceId }} <br>
-                                            <strong>Issued:</strong> {{ invoicePdfDetails?.paymentDoneDate | date: 'dd MMM yyyy' }}
-                                        </p>
-                                    </div>
+        <div class="row">
+            <div class="col-lg-8 offset-lg-2" id="htmlData">
+                <div class="invoice-content">
+                    <div class="invoice-item">
+                        <div class="row">
+                            <div class="col-md-6">
+                                <div class="invoice-logo">
+                                    <img src="assets/img/logo.png" alt="logo">
                                 </div>
                             </div>
+                            <div class="col-md-6">
+                                <p class="invoice-details">
+                                    <strong>Order:</strong> #{{ invoicePdfDetails?.invoiceId }} <br>
+                                    <strong>Issued:</strong> {{ invoicePdfDetails?.paymentDoneDate | date: 'dd MMM yyyy' }}
+                                </p>
+                            </div>
+                        </div>
+                    </div>
 
-                            <!-- Invoice Item -->
-                            <div class="invoice-item">
-                                <div class="row">
-                                    <div class="col-md-6">
-                                        <div class="invoice-info">
-                                            <strong class="customer-text">Invoice From</strong>
-                                            <p class="invoice-details invoice-details-two">
-                                                {{ invoicePdfDetails?.invoiceFrom?.name }} <br>
-                                                {{ invoicePdfDetails?.invoiceFrom?.addressLine1 }} {{ invoicePdfDetails?.invoiceFrom?.addressLine2 }}<br>
-                                                {{ invoicePdfDetails?.invoiceFrom?.city }} {{ invoicePdfDetails?.invoiceFrom?.state }} {{ invoicePdfDetails?.invoiceFrom?.zipcode }} {{ invoicePdfDetails?.invoiceFrom?.country }} <br>
-                                            </p>
-                                        </div>
-                                    </div>
-                                    <div class="col-md-6">
-                                        <div class="invoice-info invoice-info2">
-                                            <strong class="customer-text">Invoice To</strong>
-                                            <p class="invoice-details">
-                                                {{ invoicePdfDetails?.invoiceTo?.name }} <br>
-                                                {{ invoicePdfDetails?.invoiceTo?.addressLine1 }} {{ invoicePdfDetails?.invoiceTo?.addressLine2 }} <br>
-                                                {{ invoicePdfDetails?.invoiceTo?.city }} {{ invoicePdfDetails?.invoiceTo?.state }} {{ invoicePdfDetails?.invoiceTo?.zipcode }} {{ invoicePdfDetails?.invoiceFrom?.country }} <br>
-                                            </p>
-                                        </div>
-                                    </div>
+                    <!-- Invoice Item -->
+                    <div class="invoice-item">
+                        <div class="row">
+                            <div class="col-md-6">
+                                <div class="invoice-info">
+                                    <strong class="customer-text">Invoice From</strong>
+                                    <p class="invoice-details invoice-details-two">
+                                        {{ invoicePdfDetails?.invoiceFrom?.name }} <br> {{ invoicePdfDetails?.invoiceFrom?.addressLine1 }} {{ invoicePdfDetails?.invoiceFrom?.addressLine2 }}<br> {{ invoicePdfDetails?.invoiceFrom?.city }} {{ invoicePdfDetails?.invoiceFrom?.state
+                                        }} {{ invoicePdfDetails?.invoiceFrom?.zipcode }} {{ invoicePdfDetails?.invoiceFrom?.country }} <br>
+                                    </p>
                                 </div>
                             </div>
-                            <!-- /Invoice Item -->
-
-                            <!-- Invoice Item -->
-                            <div class="invoice-item">
-                                <div class="row">
-                                    <div class="col-md-12">
-                                        <div class="invoice-info">
-                                            <strong class="customer-text">Payment Method</strong>
-                                            <p *ngFor="let payment of bankDetails?.list" class="invoice-details invoice-details-two">
-                                               <strong>{{ payment?.name }}</strong> : {{ payment?.value }} 
-                                            </p>
-                                        </div>
-                                    </div>
+                            <div class="col-md-6">
+                                <div class="invoice-info invoice-info2">
+                                    <strong class="customer-text">Invoice To</strong>
+                                    <p class="invoice-details">
+                                        {{ invoicePdfDetails?.invoiceTo?.name }} <br> {{ invoicePdfDetails?.invoiceTo?.addressLine1 }} {{ invoicePdfDetails?.invoiceTo?.addressLine2 }} <br> {{ invoicePdfDetails?.invoiceTo?.city }} {{ invoicePdfDetails?.invoiceTo?.state
+                                        }} {{ invoicePdfDetails?.invoiceTo?.zipcode }} {{ invoicePdfDetails?.invoiceFrom?.country }} <br>
+                                    </p>
                                 </div>
                             </div>
-                            <!-- /Invoice Item -->
+                        </div>
+                    </div>
+                    <!-- /Invoice Item -->
 
-                            <!-- Invoice Item -->
-                            <div class="invoice-item invoice-table-wrap">
-                                <div class="row">
-                                    <div class="col-md-12">
-                                        <div class="table-responsive">
-                                            <table class="invoice-table table table-bordered">
-                                                <thead>
-                                                    <tr>
-                                                        <th>Description</th>
-                                                        <th class="text-center">Quantity</th>
-                                                        <th class="text-center">VAT</th>
-                                                        <th class="text-right">Total</th>
-                                                    </tr>
-                                                </thead>
-                                                <tbody>
-                                                    <tr>
-                                                        <td>General Consultation</td>
-                                                        <td class="text-center">1</td>
-                                                        <td class="text-center">{{ bankDetails?.currency }}0</td>
-                                                        <td class="text-right">{{ bankDetails?.currency }}{{ invoicePdfDetails?.paidAmt }}</td>
-                                                    </tr>
-                                                    <!-- <tr>
+                    <!-- Invoice Item -->
+                    <div class="invoice-item">
+                        <div class="row">
+                            <div class="col-md-12">
+                                <div class="invoice-info">
+                                    <strong class="customer-text">Payment Method</strong>
+                                    <p *ngFor="let payment of bankDetails?.list" class="invoice-details invoice-details-two">
+                                        <strong>{{ payment?.name }}</strong> : {{ payment?.value }}
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- /Invoice Item -->
+
+                    <!-- Invoice Item -->
+                    <div class="invoice-item invoice-table-wrap">
+                        <div class="row">
+                            <div class="col-md-12">
+                                <div class="table-responsive">
+                                    <table class="invoice-table table table-bordered">
+                                        <thead>
+                                            <tr>
+                                                <th>Description</th>
+                                                <th class="text-center">Quantity</th>
+                                                <th class="text-center">VAT</th>
+                                                <th class="text-right">Total</th>
+                                            </tr>
+                                        </thead>
+                                        <tbody>
+                                            <tr>
+                                                <td>General Consultation</td>
+                                                <td class="text-center">1</td>
+                                                <td class="text-center">{{ bankDetails?.currency }}0</td>
+                                                <td class="text-right">{{ bankDetails?.currency }}{{ invoicePdfDetails?.paidAmt }}</td>
+                                            </tr>
+                                            <!-- <tr>
                                                         <td>Video Call Booking</td>
                                                         <td class="text-center">1</td>
                                                         <td class="text-center">$0</td>
                                                         <td class="text-right">$250</td>
                                                     </tr> -->
-                                                </tbody>
-                                            </table>
-                                        </div>
-                                    </div>
-                                    <div class="col-md-6 col-xl-4 ml-auto">
-                                        <div class="table-responsive">
-                                            <table class="invoice-table-two table">
-                                                <tbody>
-                                                    <tr>
-                                                        <th>Subtotal:</th>
-                                                        <td><span>{{ bankDetails?.currency }}{{ invoicePdfDetails?.paidAmt }}</span></td>
-                                                    </tr>
-                                                    <!-- <tr>
+                                        </tbody>
+                                    </table>
+                                </div>
+                            </div>
+                            <div class="col-md-6 col-xl-4 ml-auto">
+                                <div class="table-responsive">
+                                    <table class="invoice-table-two table">
+                                        <tbody>
+                                            <tr>
+                                                <th>Subtotal:</th>
+                                                <td><span>{{ bankDetails?.currency }}{{ invoicePdfDetails?.paidAmt }}</span></td>
+                                            </tr>
+                                            <!-- <tr>
                                                         <th>Discount:</th>
                                                         <td><span>-10%</span></td>
                                                     </tr> -->
-                                                    <tr>
-                                                        <th>Total Amount:</th>
-                                                        <td><span>{{ bankDetails?.currency }}{{ invoicePdfDetails?.paidAmt }}</span></td>
-                                                    </tr>
-                                                </tbody>
-                                            </table>
-                                        </div>
-                                    </div>
+                                            <tr>
+                                                <th>Total Amount:</th>
+                                                <td><span>{{ bankDetails?.currency }}{{ invoicePdfDetails?.paidAmt }}</span></td>
+                                            </tr>
+                                        </tbody>
+                                    </table>
                                 </div>
                             </div>
-                            <!-- /Invoice Item -->
+                        </div>
+                    </div>
+                    <!-- /Invoice Item -->
 
-                            <!-- Invoice Information -->
-                            <!-- <div class="other-info">
+                    <!-- Invoice Information -->
+                    <!-- <div class="other-info">
                                 <h4>Other information</h4>
                                 <p class="text-muted mb-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                                     Vivamus sed
@@ -134,16 +132,16 @@
                                     pellentesque
                                     libero.</p>
                             </div> -->
-                            <!-- /Invoice Information -->
+                    <!-- /Invoice Information -->
 
-                        </div>
-                    </div>
                 </div>
             </div>
-            
         </div>
-        <!-- /Invoice Content -->
-        <div class="vertical-center">
-            <button type="submit" class="btn btn-primary submit-btn" (click)="generarPDF()">Save as Pdf</button>
-        </div>
+    </div>
+
+</div>
+<!-- /Invoice Content -->
+<div class="vertical-center">
+    <button type="submit" class="btn btn-primary submit-btn" (click)="generarPDF()">Save as Pdf</button>
+</div>
 \
