--- a/src/app/module/patient-panel/patient-profile-settings/patient-profile-settings.component.html
+++ b/src/app/module/patient-panel/patient-profile-settings/patient-profile-settings.component.html
@@ -1,19 +1,9 @@
 <ngx-ui-loader [loaderId]="'loader-02'"></ngx-ui-loader>
 
-<!-- Breadcrumb -->
-<div class="breadcrumb-bar">
-    <div class="container-fluid">
-        <div class="row align-items-center">
-            <div class="col-md-12 col-12">
-                <h2 class="breadcrumb-title">Profile Settings</h2>
-            </div>
-        </div>
-    </div>
-</div>
-<!-- /Breadcrumb -->
+
 
 <!-- Page Content -->
-<div class="content">
+<div class="content comgap1">
     <div class="container-fluid">
         <div class="row">
 
