--- a/src/app/module/patient-panel/reschedule-appointment/reschedule-appointment.component.html
+++ b/src/app/module/patient-panel/reschedule-appointment/reschedule-appointment.component.html
@@ -1,18 +1,8 @@
 <ngx-ui-loader [loaderId]="'loader-02'"></ngx-ui-loader>
-<!-- Breadcrumb -->
-<div class="breadcrumb-bar">
-    <div class="container-fluid">
-        <div class="row align-items-center">
-            <div class="col-md-12 col-12">
-                <h2 class="breadcrumb-title">Reschedule Appointment</h2>
-            </div>
-        </div>
-    </div>
-</div>
-<!-- /Breadcrumb -->
+
 
 <!-- Page Content -->
-<div class="content">
+<div class="content comgap1">
     <div class="container">
 
         <div class="row">
