--- a/src/styles.css
+++ b/src/styles.css
@@ -1,15 +1,13 @@
 /* You can add global styles to this file, and also import other style files */
 
-.kk
-{
+.kk {
     width: 20%;
     background: #3a9cd8 !important;
     color: white;
     font-size: 14px;
 }
 
-.w100
-{
+.w100 {
     width: 100% !important;
 }
 
@@ -48,7 +46,6 @@
 }
 
 .kkall {
-    
     background: #3a9cd8 !important;
     color: white !important;
     font-size: 14px;
@@ -92,7 +89,7 @@
 }
 
 .footer .footer-menu ul li a::before {
-   display: none;
+    display: none;
 }
 
 .gradient-bg {
@@ -102,59 +99,73 @@
     /* background: linear-gradient(
 -45deg
 , #1c5993, #1375b3, #259cd7, #23a6d5); */
-    background: linear-gradient(
--45deg
-, #5cd2fd, #329ace, #0b5786, #012e58);
+    background: linear-gradient( -45deg, #5cd2fd, #329ace, #0b5786, #012e58);
     background-size: 400% 400%;
     animation: gradient 15s ease infinite;
     background: #014974;
 }
-.comgap{
+
+.comgap {
     padding-top: 5%;
 }
+
+.comgap1 {
+    padding-top: 2%;
+}
+
 a.forgot-link {
     text-align: center;
     display: block;
 }
+
 img.card-img-top {
     width: 100%;
     height: 180px;
 }
-@media screen and (max-width:600px){
-    .login-modal .modal-content {
-    height: 580px !important;
-    width: 100%!important;
-    border-radius: 16px !important;
-    margin-left: 0px !important;
 
+@media screen and (max-width:600px) {
+    .login-modal .modal-content {
+        height: 580px !important;
+        width: 100%!important;
+        border-radius: 16px !important;
+        margin-left: 0px !important;
+    }
+    .mbflex {
+        display: block!important;
+        text-align: center;
+    }
+    .news-letter .news-letter-col input[type="email"] {
+        margin-right: 0px;
+    }
+    .grapemail {
+        text-align: center;
+        margin-top: 40px;
+    }
+    .kk2 {
+        width: 60%!important;
+        background: #3a9cd8;
+        color: white;
+        font-size: 14px;
+        margin: auto;
+        margin-top: 20px;
+    }
+    .news-letter {
+        padding: 60px 0;
+        background-image: url(/assets/img/grabmb.png);
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
+    }
+    .texcenr {
+        text-align: center!important;
+    }
 }
-.mbflex{
-    display: block!important;
-    text-align: center;
-}
-.news-letter .news-letter-col input[type="email"] {
-    margin-right: 0px;
-}
-.grapemail{
-    text-align: center;
-    margin-top: 40px;
-}
-.kk2{
-    width: 60%!important;
-    background: #3a9cd8;
-    color: white;
-    font-size: 14px;
-    margin: auto;
-    margin-top: 20px;
-}
-.news-letter {
-    padding: 60px 0;
-    background-image: url(/assets/img/grabmb.png);
-    background-position: center;
+
+.bgimg {
+    background-image: url("/assets/img/bgintro.png");
+    background-size: 100% 75%;
     background-repeat: no-repeat;
-    background-size: cover;
-}
-.texcenr{
-    text-align: center!important;
-}
+    padding-top: 50px;
+    padding-bottom: 50px;
+    background-color: white;
 }
