add assessment result

--- a/src/app/module/oral-self-asessment/oral-self-asessment.component.html
+++ b/src/app/module/oral-self-asessment/oral-self-asessment.component.html
@@ -498,7 +498,7 @@
                             <div class="buttonsdiv form-group">
                                 <button type="button" class="btn btn-dark goback" data-dismiss="modal" (click)="hide()">GO
                                     BACK</button>
-                                <button type="submit" class="btn btn-primary viewr">VIEW RESULT</button>
+                                <button type="submit" class="btn btn-primary viewr" routerLink="/web-panel/assessment-result">VIEW RESULT</button>
                             </div>
 
 
