add privacy-policy ui

--- a/src/app/core/footer/footer.component.html
+++ b/src/app/core/footer/footer.component.html
@@ -124,7 +124,7 @@
                             <ul class="policy-menu ">
                                 <li><a (click)="footerRouter('/web-panel/covid-guidelines')" href="javascript:void(0);">Covid 19 Information</a></li>
                                 <li><a href="javascript:void(0);" (click)="footerRouter('/web-panel/term-conditions')">Terms</a></li>
-                                <li><a href="#">Privacy Policy</a></li>
+                                <li><a href="javascript:void(0);" (click)="footerRouter('/web-panel/privacy-policy')">Privacy Policy</a></li>
                             </ul>
                         </div>
                         <!-- /Copyright Menu -->
