--- a/src/app/module/term-conditions/term-conditions.component.html
+++ b/src/app/module/term-conditions/term-conditions.component.html
@@ -13,7 +13,7 @@
                 <div class="terms-content">
                     <div class="terms-text">
                         <h4>
-                            Please carefully go through these terms and conditions <b>(“Terms”)</b> and the privacy policy available at </h4>
+                            Please carefully go through these terms and conditions <b>(“Terms”)</b> available at </h4>
                         <p> <a href="https://www.Teladent.com/company/privacy">https://www.Teladent.com/company/privacy </a> <b>(“Privacy Policy”)</b> before you decide to access the Website or avail the services made available on the Website by Teladent.
                             These Terms and the Privacy Policy together constitute a legal agreement <b>(“Agreement”)</b> between you and Teladent in connection with your visit to the Website and your use of the Services (as defined below).
                         </p>
